# dj_palette

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  admin.py  apps.py  models.py  pyproject.toml  setup.py  site.py
core/: admin.py  models.py
core/migrations/: 0001_initial.py  0002_youtubesnippet.py  0003_page_image.py
dj_palette/: .gitignore  apps.py  urls.py  views.py
dj_palette.egg-info/: PKG-INFO
dj_palette/palette_admin/: admin.py  apps.py  conf.py  models.py  site.py  views.py
dj_palette/palette_admin/migrations/: 0001_initial.py
dj_palette/palette_admin/static/css/: palette-admin.css
dj_palette/palette_admin/templates/admin/: 404.html  app_index.html  base.html  base_site.html  change_form.html  change_list.html  change_password.html  delete_confirmation.html  index.html  login.html  profile.html
dj_palette/palette_admin/templates/registration/: password_change_done.html  password_change_form.html  password_reset_confirm.html  password_reset_email.html  password_reset_form.html
dj_palette/palette_admin/templatetags/: palette_admin.py
dj_palette/templates/palette/components/: card.html
dj_palette/templatetags/: admin_back.py  palette.py  palette_tags.py  palette_v2.py
docs/: components.rst  conf.py  examples.rst  features.rst  getting_started.rst  index.rst  installation.rst  palette_admin.rst  quick_start.rst  requirements.txt  template_tags.rst
project/: settings.py  urls.py
templates/admin/: app_index.html  base_site.html  change_form.html  change_list.html  login.html
templates/admin/auth/user/: change_list.html
templates/palette/: dashboard.html
templates/palette/components/: card.html
templatetags/: palette.py
